--- a/flappybird.css
+++ b/flappybird.css
@@ -48,27 +48,30 @@
     height: 50px;
     width: 50px;
 }
-#result{
+/* #result{
     height: 70vh;
     width: 100%;
     background-color: #038696;
-    /* // */
-    /* margin: 5rem auto; */
-    padding-top: 250px;
-    /* border: 2px solid white; */
-    border-radius: 20px;
+ 
+    margin: 5rem auto;
+     padding-top: 250px;
+     border: 2px solid white; 
+     border-radius: 20px;
     display: none; 
-    text-align: center;
+    text-align: center; 
 
-}
+}  */
 #h1{
     margin-bottom: 10px;
     color: #f7a34d;
-    font-size: 70px;
+    font-size: 25px;
     text-shadow: 0px 2px 0px navajowhi;
 }
-.result_box{
-    background-color: #e0d796;
+#result_box{
+  position: relative;
+  bottom: 350px;
+  display: none;
+background-color: #e0d796;
     width: 300px;
     height: 100px;
     margin: auto;
