--- a/flappybird.css
+++ b/flappybird.css
@@ -2,6 +2,10 @@
     margin: 0;
     padding: 0;
 }
+body{
+    background-image: url(./abcd.webp);
+    background-size: cover;
+}
 
 #game{
     
@@ -66,13 +70,19 @@
 } 
 #game_over{
     margin-bottom: 10px;
+    position: absolute;
+    top: 30px;
+    left: 66px;
+
     color: #f7a34d;
     font-size: 60px;
     text-shadow: 0px 1px 0px cornsilk;
 }
 #result_box{
-
- background-color: #e0d796;
+    position: absolute;
+    top: 121px;
+    left: 61px;
+   background-color: #e0d796;
     width: 300px;
     height: 100px;
     margin: auto;
@@ -92,10 +102,19 @@
     margin-top: 1rem;
     cursor: pointer;
     margin-top: 20px;
+    
+    position: relative;
+    top: 44px;
+    right: 47px;
+
 
 }
 #text{
     margin-top: 1rem;
     font-size: 2rem;
     color: white;
+}
+#result img{
+    position: relative;
+    left: 83px;
 }
