--- a/flappybird.css
+++ b/flappybird.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-image: url(./abcd.webp);
+    background-image: url(./bg2.webp);
     background-size: cover;
 }
 
