--- a/flappybird.css
+++ b/flappybird.css
@@ -105,7 +105,7 @@ body{
     
     position: relative;
     top: 44px;
-    right: 47px;
+    right: 90px;
 
 
 }
@@ -117,4 +117,5 @@ body{
 #result img{
     position: relative;
     left: 83px;
+    width: 200px;
 }
