--- a/flappybird.css
+++ b/flappybird.css
@@ -66,6 +66,8 @@ body{
      border-radius: 20px;
     display: none; 
     text-align: center; 
+    box-shadow: 5px 5px 10px white;
+    border: none;
 
 } 
 #game_over{
